--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -94,10 +94,10 @@
           <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path fill="#4285F4" d="M17.64 9.2c0-.637-.057-1.251-.164-1.84H9v3.481h4.844c-.209 1.125-.843 2.078-1.796 2.717v2.258h2.908c1.702-1.567 2.684-3.874 2.684-6.615z"/><path fill="#34A853" d="M9 18c2.43 0 4.467-.806 5.956-2.18l-2.908-2.259c-.806.54-1.837.86-3.048.86-2.344 0-4.328-1.584-5.036-3.711H.957v2.332A8.997 8.997 0 0 0 9 18z"/><path fill="#FBBC05" d="M3.964 10.71A5.41 5.41 0 0 1 3.682 9c0-.593.102-1.17.282-1.71V4.958H.957A8.996 8.996 0 0 0 0 9c0 1.452.348 2.827.957 4.042l3.007-2.332z"/><path fill="#EA4335" d="M9 3.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C13.463.891 11.426 0 9 0A8.997 8.997 0 0 0 .957 4.958L3.964 7.29C4.672 5.163 6.656 3.58 9 3.58z"/></svg>
           Lier mon compte Google
         <% end %>
-        <%# <%= button_to user_apple_omniauth_authorize_path, method: :post, data: { turbo: false }, class: "button", style: "display: flex; justify-content: center; align-items: center; gap: 10px; background-color: #000; color: #fff;" do 
+        <%= button_to user_apple_omniauth_authorize_path, method: :post, data: { turbo: false }, class: "button", style: "display: flex; justify-content: center; align-items: center; gap: 10px; background-color: #000; color: #fff;" do %>
           <svg width="18" height="18" viewBox="0 0 18 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg"><path d="M15.283 13.192c-.256.591-.56 1.136-.91 1.636-.478.682-.871 1.154-1.173 1.417-.467.43-.967.651-1.503.663-.385 0-.85-.11-1.39-.332-.543-.221-1.041-.332-1.497-.332-.478 0-.991.11-1.539.332-.549.221-.991.337-1.329.349-.515.021-1.027-.205-1.539-.682-.327-.285-.735-.773-1.224-1.465-.525-.739-.957-1.596-1.295-2.574-.362-1.056-.543-2.078-.543-3.068 0-1.134.245-2.111.735-2.931.385-.658.897-1.177 1.539-1.558.642-.381 1.335-.575 2.082-.588.408 0 .944.127 1.61.375.664.249 1.091.375 1.278.375.14 0 .614-.148 1.417-.443.759-.273 1.4-.387 1.925-.342 1.423.115 2.492.676 3.203 1.687-1.272.771-1.902 1.851-1.889 3.237.012 1.08.403 1.978 1.173 2.691.349.331.738.587 1.171.769-.094.273-.193.534-.298.784v.001zM12.019.356c0 .846-.291 1.636-.907 2.367-.743.869-1.642 1.372-2.617 1.292-.012-.101-.02-.208-.02-.32 0-.812.353-1.681.98-2.392.314-.36.712-.659 1.195-.898.482-.235.938-.365 1.367-.387.012.113.018.226.018.338h-.016z"/></svg>
           Lier mon compte Apple
-        <% end  %>
+        <% end %>
       </div>
     <% end %>
   </div>
