--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -145,10 +145,7 @@
                 </div>
               <%end%>
             <%end%>
-            <button id="openPopupSave"
-                    style="border:none; background:none;"
-                    data-controller="save-popup"
-                    data-action="click->save-popup#open">
+            <button id="openPopupSave" style="border:none; background:none;">
               <div class="circle">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M25.3334 32L16.0001 24L6.66675 32V0H25.3334V32Z" fill="white"/>
@@ -473,30 +470,34 @@
       </div>
     </div>
     
-    <div id="shareModal" class="popup" data-share-target="modal" data-action="click->share#backdropClose">
-      <div class="popup-content">
-        <div class="top-popup">
-          <svg class="close-popup" id="closePopup" data-action="click->share#close" data-share-target="close" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
-          </svg>
+     <div id="shareModal" class="popup" data-share-target="modal" data-action="click->share#backdropClose">
+          <div class="popup-content">
+            <div class="top-popup">
+              <svg class="close-popup" id="closePopup" data-action="click->share#close" data-share-target="close" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
+              </svg>
+            </div>
+            <div class="flex-title-popup">
+              <p class="title-popup">Partager cette page</p>
+              <button id="copyLink" class="popup-link-add" data-action="click->share#copyLink" data-share-target="copy">Copier le lien</button>
+            </div>
+            <div class="share-options">
+              <button id="shareX" class="share-button" title="Partager sur X" data-action="click->share#shareX" data-share-target="x">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.751 3H20.818L14.118 10.625L22 21H15.828L10.995 14.707L5.464 21H2.394L9.561 12.845L2 3H8.328L12.698 8.752L17.751 3ZM16.675 19.172H18.375L7.404 4.732H5.58L16.675 19.172Z" fill="white"/></svg>
+              </button>
+              <button id="shareMessages" class="share-button" data-action="click->share#shareMessages" data-share-target="messages" title="Partager par Message">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 2H4C2.9 2 2.01 2.9 2.01 4L2 22L6 18H20C21.1 18 22 17.1 22 16V4C22 2.9 21.1 2 20 2ZM17 14H7C6.45 14 6 13.55 6 13C6 12.45 6.45 12 7 12H17C17.55 12 18 12.45 18 13C18 13.55 17.55 14 17 14ZM17 11H7C6.45 11 6 10.55 6 10C6 9.45 6.45 9 7 9H17C17.55 9 18 9.45 18 10C18 10.55 17.55 11 17 11ZM17 8H7C6.45 8 6 7.55 6 7C6 6.45 6.45 6 7 6H17C17.55 6 18 6.45 18 7C18 7.55 17.55 8 17 8Z" fill="white"/></svg>
+              </button>
+              <button id="shareEmail" data-action="click->share#shareEmail" data-share-target="email" class="share-button" title="Partager par Email">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 4H4C2.9 4 2.01 4.9 2.01 6L2 18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V6C22 4.9 21.1 4 20 4ZM20 8L12 13L4 8V6L12 11L20 6V8Z" fill="white"/></svg>
+              </button>
+              <button id="shareWhatsApp" data-action="click->share#shareWhatsApp" data-share-target="whatsapp" class="share-button" title="Partager sur WhatsApp">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.05 4.91006C18.1332 3.98399 17.0412 3.24973 15.8377 2.75011C14.6341 2.25049 13.3432 1.99552 12.04 2.00006C6.58005 2.00006 2.13005 6.45006 2.13005 11.9101C2.13005 13.6601 2.59005 15.3601 3.45005 16.8601L2.05005 22.0001L7.30005 20.6201C8.75005 21.4101 10.38 21.8301 12.04 21.8301C17.5 21.8301 21.9501 17.3801 21.9501 11.9201C21.9501 9.27006 20.92 6.78006 19.05 4.91006ZM12.04 20.1501C10.56 20.1501 9.11005 19.7501 7.84005 19.0001L7.54005 18.8201L4.42005 19.6401L5.25005 16.6001L5.05005 16.2901C4.2278 14.977 3.79119 13.4593 3.79005 11.9101C3.79005 7.37006 7.49005 3.67006 12.03 3.67006C14.23 3.67006 16.3 4.53006 17.85 6.09006C18.6175 6.85402 19.2257 7.76272 19.6394 8.76348C20.0531 9.76425 20.2641 10.8372 20.26 11.9201C20.28 16.4601 16.58 20.1501 12.04 20.1501ZM16.56 13.9901C16.31 13.8701 15.09 13.2701 14.87 13.1801C14.64 13.1001 14.48 13.0601 14.31 13.3001C14.14 13.5501 13.67 14.1101 13.53 14.2701C13.39 14.4401 13.24 14.4601 12.99 14.3301C12.74 14.2101 11.94 13.9401 11 13.1001C10.26 12.4401 9.77005 11.6301 9.62005 11.3801C9.48005 11.1301 9.60005 11.0001 9.73005 10.8701C9.84005 10.7601 9.98005 10.5801 10.1 10.4401C10.22 10.3001 10.27 10.1901 10.35 10.0301C10.43 9.86006 10.39 9.72006 10.33 9.60006C10.27 9.48006 9.77005 8.26006 9.57005 7.76006C9.37005 7.28006 9.16005 7.34006 9.01005 7.33006H8.53005C8.36005 7.33006 8.10005 7.39006 7.87005 7.64006C7.65005 7.89006 7.01005 8.49006 7.01005 9.71006C7.01005 10.9301 7.90005 12.1101 8.02005 12.2701C8.14005 12.4401 9.77005 14.9401 12.25 16.0101C12.84 16.2701 13.3 16.4201 13.66 16.5301C14.25 16.7201 14.79 16.6901 15.22 16.6301C15.7 16.5601 16.69 16.0301 16.89 15.4501C17.1 14.8701 17.1 14.3801 17.03 14.2701C16.96 14.1601 16.81 14.1101 16.56 13.9901Z" fill="white"/></svg>
+              </button>
+            </div>
+            <input type="text" id="shareLink" data-share-target="link" value="" hidden readonly>
+          </div>
         </div>
-        <div class="flex-title-popup">
-          <p class="title-popup">Partager cette page</p>
-          <button id="copyLink" class="popup-link-add" data-action="click->share#copyLink" data-share-target="copy">Copier le lien</button>
-        </div>
-        <div class="share-options">
-          <button id="shareX" class="share-button" title="Partager sur X" data-action="click->share#shareX" data-share-target="x">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M17.751 3H20.818L14.118 10.625L22 21H15.828L10.995 14.707L5.464 21H2.394L9.561 12.845L2 3H8.328L12.698 8.752L17.751 3ZM16.675 19.172H18.375L7.404 4.732H5.58L16.675 19.172Z" fill="white"/></svg>
-          </button>
-          <button id="shareMessages" class="share-button" data-action="click->share#shareMessages" data-share-target="messages" title="Partager par Message">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20 2H4C2.9 2 2.01 2.9 2.01 4L2 22L6 18H20C21.1 18 22 17.1 22 16V4C22 2.9 21.1 2 20 2ZM17 14H7C6.45 14 6 13.55 6 13C6 12.45 6.45 12 7 12H17C17.55 12 18 12.45 18 13C18 13.55 17.55 14 17 14ZM17 11H7C6.45 11 6 10.55 6 10C6 9.45 6.45 9 7 9H17C17.55 9 18 9.45 18 10C18 10.55 17.55 11 17 11ZM17 8H7C6.45 8 6 7.55 6 7C6 6.45 6.45 6 7 6H17C17.55 6 18
-            <%# Fermeture finale du SVG de Messages (manquante dans l'original) %>
-            <path d="M17 8H7C6.45 8 6 7.55 6 7C6 6.45 6.45 6 7 6H17C17.55 6 18 6.45 18 7C18 7.55 17.55 8 17 8Z" fill="white"/></svg>
-          </button>
-        </div>
-      </div>
-    </div>
-    
     <%# --- MODALE DU SLIDER D'IMAGES (CORRIGÉE) --- %>
     <div class="modal modal-image fade" id="imageSliderModal" tabindex="-1" role="dialog" aria-labelledby="imageSliderModalLabel" 
          aria-hidden="true" 
@@ -565,8 +566,84 @@
         </div>
       </div>
     </div>
-    
+     <div id="popup" class="popup">
+      <div class="popup-content">
+        <div class="top-popup">
+          <svg class="close-popup" id="closePopupSave" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19.9941 16.9964L33.3719 3.63981C33.7717 3.23995 33.9964 2.69763 33.9964 2.13215C33.9964 1.56667 33.7717 1.02435 33.3719 0.624492C32.972 0.224637 32.4297 0 31.8642 0C31.2987 0 30.7564 0.224637 30.3566 0.624492L17 14.0023L3.64343 0.624492C3.24358 0.224637 2.70125 5.02059e-07 2.13577 5.06273e-07C1.57029 5.10486e-07 1.02797 0.224637 0.628116 0.624492C0.228261 1.02435 0.00362441 1.56667 0.00362441 2.13215C0.0036244 2.69763 0.228261 3.23995 0.628116 3.63981L14.0059 16.9964L0.628116 30.3529C0.429087 30.5504 0.271115 30.7852 0.163309 31.044C0.055504 31.3027 0 31.5803 0 31.8606C0 32.1409 0.055504 32.4185 0.163309 32.6772C0.271115 32.936 0.429087 33.1709 0.628116 33.3683C0.825519 33.5673 1.06038 33.7253 1.31914 33.8331C1.5779 33.9409 1.85545 33.9964 2.13577 33.9964C2.4161 33.9964 2.69364 33.9409 2.95241 33.8331C3.21117 33.7253 3.44603 33.5673 3.64343 33.3683L17 19.9905L30.3566 33.3683C30.554 33.5673 30.7888 33.7253 31.0476 33.8331C31.3064 33.9409 31.5839 33.9964 31.8642 33.9964C32.1445 33.9964 32.4221 33.9409 32.6809 33.8331C32.9396 33.7253 33.1745 33.5673 33.3719 33.3683C33.5709 33.1709 33.7289 32.936 33.8367 32.6772C33.9445 32.4185 34 32.1409 34 31.8606C34 31.5803 33.9445 31.3027 33.8367 31.044C33.7289 30.7852 33.5709 30.5504 33.3719 30.3529L19.9941 16.9964Z" fill="#202020"/>
+          </svg>
+        </div>
+        <div class="flex-title-popup">
+          <p class="title-popup">Ajouter dans une liste</p>
+          <%# Correction 1 : On passe l'oeuvre_id au lieu du designer_id %>
+          <%= link_to 'Créer une liste', new_list_path(oeuvre_id: oeuvre.id), class: "popup-link-add" %>
+        </div>
+        <% @lists.each do |list| %>
+          <div class="field">
+            <div class="box-list">
+              <%= link_to list, class: "box-list-left" do %>
+                <div class="box-text-list">
+                  <p class="title-list"><%= list.name %></p>
+                  <p class="nb-list"><%= list.designers.count + list.oeuvres.count %> Références</p>
+                </div>
+              <% end %>
+              
+              <%# Correction 2 : On vérifie si l'OEUVRE est dans la liste %>
+              <% if list.oeuvres.include?(oeuvre) %>
+                <%# Correction 3 : Route de suppression pour une oeuvre %>
+                <%= button_to remove_oeuvre_list_path(list, oeuvre_id: oeuvre.id),
+              method: :post,
+              style: "background: none; border:none;",
+              data: { confirm: "Êtes-vous sûr de vouloir retirer cette référence ?" } do%>
+                  <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_834_332)">
+                      <path d="M18.5 37C13.5935 37 8.88795 35.0509 5.41852 31.5815C1.9491 28.1121 0 23.4065 0 18.5C0 13.5935 1.9491 8.88795 5.41852 5.41852C8.88795 1.9491 13.5935 0 18.5 0C23.4065 0 28.1121 1.9491 31.5815 5.41852C35.0509 8.88795 37 13.5935 37 18.5C37 23.4065 35.0509 28.1121 31.5815 31.5815C28.1121 35.0509 23.4065 37 18.5 37ZM18.5 33.3C22.4252 33.3 26.1896 31.7407 28.9652 28.9652C31.7407 26.1896 33.3 22.4252 33.3 18.5C33.3 14.5748 31.7407 10.8104 28.9652 8.03482C26.1896 5.25928 22.4252 3.7 18.5 3.7C14.5748 3.7 10.8104 5.25928 8.03482 8.03482C5.25928 10.8104 3.7 14.5748 3.7 18.5C3.7 22.4252 5.25928 26.1896 8.03482 28.9652C10.8104 31.7407 14.5748 33.3 18.5 33.3Z" fill="#202020"/>
+                      <path d="M15.4035 22.0475L10.5409 17.1848L8 19.5065L15.4035 26.9102L29.9916 12.3221L27.6695 10L15.4035 22.0475Z" fill="#202020"/>
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_834_332">
+                        <rect width="37" height="37" fill="white"/>
+                      </clipPath>
+                    </defs>
+                  </svg>
+                <% end %>
+              <% else %>
+                <%# Correction 4 : Route d'ajout pour une oeuvre %>
+                <%= form_with(url: add_oeuvre_list_path(list), method: "post", local: true) do |form| %>
+                  <%= form.hidden_field :oeuvre_id, value: oeuvre.id %>
+                  <button type="submit" class="add-to-list-btn" style="border:none; background:none;">
+                    <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_829_310)">
+                        <path d="M20.35 16.65H27.75V20.35H20.35V27.75H16.65V20.35H9.25V16.65H16.65V9.25H20.35V16.65ZM18.5 37C13.5935 37 8.88795 35.0509 5.41852 31.5815C1.9491 28.1121 0 23.4065 0 18.5C0 13.5935 1.9491 8.88795 5.41852 5.41852C8.88795 1.9491 13.5935 0 18.5 0C23.4065 0 28.1121 1.9491 31.5815 5.41852C35.0509 8.88795 37 13.5935 37 18.5C37 23.4065 35.0509 28.1121 31.5815 31.5815C28.1121 35.0509 23.4065 37 18.5 37ZM18.5 33.3C22.4252 33.3 26.1896 31.7407 28.9652 28.9652C31.7407 26.1896 33.3 22.4252 33.3 18.5C33.3 14.5748 31.7407 10.8104 28.9652 8.03482C26.1896 5.25928 22.4252 3.7 18.5 3.7C14.5748 3.7 10.8104 5.25928 8.03482 8.03482C5.25928 10.8104 3.7 14.5748 3.7 18.5C3.7 22.4252 5.25928 26.1896 8.03482 28.9652C10.8104 31.7407 14.5748 33.3 18.5 33.3Z" fill="#202020"/>
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_829_310">
+                          <rect width="37" height="37" fill="white"/>
+                        </clipPath>
+                      </defs>
+                    </svg>
+                    <svg class="hover-btn" width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <g clip-path="url(#clip0_834_332)">
+                        <path d="M18.5 37C13.5935 37 8.88795 35.0509 5.41852 31.5815C1.9491 28.1121 0 23.4065 0 18.5C0 13.5935 1.9491 8.88795 5.41852 5.41852C8.88795 1.9491 13.5935 0 18.5 0C23.4065 0 28.1121 1.9491 31.5815 5.41852C35.0509 8.88795 37 13.5935 37 18.5C37 23.4065 35.0509 28.1121 31.5815 31.5815C28.1121 35.0509 23.4065 37 18.5 37ZM18.5 33.3C22.4252 33.3 26.1896 31.7407 28.9652 28.9652C31.7407 26.1896 33.3 22.4252 33.3 18.5C33.3 14.5748 31.7407 10.8104 28.9652 8.03482C26.1896 5.25928 22.4252 3.7 18.5 3.7C14.5748 3.7 10.8104 5.25928 8.03482 8.03482C5.25928 10.8104 3.7 14.5748 3.7 18.5C3.7 22.4252 5.25928 26.1896 8.03482 28.9652C10.8104 31.7407 14.5748 33.3 18.5 33.3Z" fill="#202020"/>
+                        <path d="M15.4035 22.0475L10.5409 17.1848L8 19.5065L15.4035 26.9102L29.9916 12.3221L27.6695 10L15.4035 22.0475Z" fill="#202020"/>
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_834_332">
+                          <rect width="37" height="37" fill="white"/>
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </button>
+                <% end %>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div><%# Fin de div.body-show %>
+
+  
     <script>
       document.addEventListener("turbo:load", () => {
       // Ouvrir le modal
@@ -629,25 +706,21 @@
     </script>
     <script>
       document.addEventListener("turbo:load", () => {
-        const openPopupButton = document.getElementById("openPopupSave");
-        const closePopupButton = document.getElementById("closePopupSave");
-        const popup = document.getElementById("popup");
+        const openPopupSave = document.getElementById("openPopupSave");
+        const closePopupSave = document.getElementById("closePopupSave");
+        const popupSave = document.getElementById("popup");
 
-          if (!openPopupButton || !closePopupButton || !popup) return;
-
-        openPopupButton.addEventListener("click", function() {
-          popup.style.display = "flex";
-        });
-
-        closePopupButton.addEventListener("click", function() {
-          popup.style.display = "none";
-        });
-
-        // Fermer la popup en cliquant en dehors de celle-ci
-        window.addEventListener("click", function(event) {
-          if (event.target === popup) {
-            popup.style.display = "none";
-          }
-        });
-      });
+        if (openPopupSave && closePopupSave && popupSave) {
+          openPopupSave.addEventListener("click", () => {
+                popupSave.style.display = "flex";
+              });
+              closePopupSave.addEventListener("click", () => {
+                popupSave.style.display = "none";
+              });
+              window.addEventListener("click", (event) => {
+                if (event.target === popupSave) {
+                  popupSave.style.display = "none";
+                }
+              });
+      }});
     </script>
