--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -84,7 +84,7 @@
       </div>
     </div>
     <div class="link-header">
-      <%= link_to t('header.donation'), "https://fr.tipeee.com/le-site-omniscient-design/", target: "_blank", class: "underline black medium"%>
+      <%= link_to t('header.donation'), donateurs_path, class: "underline black medium"%>
       <%= link_to t('header.legal'), mentionslegales_path, class: "underline"%>
       <%= link_to t('header.policy'), politiquedeconfidentialite_path, class: "underline"%>
       <p><%= link_to t('header.terms'), cgu_path, class: "underline"%> | <%= link_to t('header.cookies'), cookies_path, class: "underline"%></p>
