--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="<%= I18n.locale %>">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= turbo_include_tags %>
@@ -36,7 +36,7 @@
         body { overflow: auto !important; }
       </style>
     </noscript>
-      <!-- Google Tag Manager -->
+    <!-- Google Tag Manager -->
     <script async>
       (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
           new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -86,14 +86,16 @@
     <% end %>
     <% main_show = (controller_name == 'oeuvres' || controller_name == 'designers' || controller_name == 'studios') && action_name == 'show' || (controller_name == 'pages' && action_name == 'presentation') %>
     <main class="<%= 'main-show' if main_show %>">
-      <div id="loading" data-loading-target="loading">
-        <div class="loader-bg">
-          <video autoplay loop muted playsinline webkit-playsinline preload="auto">
-            <source src="<%= asset_path('loader.webm') %>" type="video/webm">
-            <source src="<%= asset_path('loader.mp4') %>" type="video/mp4">
-          </video>
+      <% unless native_app? %>
+        <div id="loading" data-loading-target="loading">
+          <div class="loader-bg">
+            <video autoplay loop muted playsinline webkit-playsinline preload="auto">
+              <source src="<%= asset_path('loader.webm') %>" type="video/webm">
+              <source src="<%= asset_path('loader.mp4') %>" type="video/mp4">
+            </video>
+          </div>
         </div>
-      </div>
+      <%end%>
       <div id="content" data-loading-target="content">
         <%= yield %>
       </div>
