--- a/app/assets/stylesheets/base/_global.scss
+++ b/app/assets/stylesheets/base/_global.scss
@@ -165,6 +165,7 @@ body.dark-mode {
 @media screen and (max-width: 425px) {
   .grid-1 {
     padding: 0 5vw 32px 5vw;
+    padding-top: env(safe-area-inset-top);
   }
 }
 
