--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, viewport-fit=cover">
+    <%= javascript_importmap_tags %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= turbo_include_tags %>
@@ -90,16 +91,16 @@
     <% end %>
     <% main_show = (controller_name == 'oeuvres' || controller_name == 'designers' || controller_name == 'studios') && action_name == 'show' || (controller_name == 'pages' && action_name == 'presentation') %>
     <main class="<%= 'main-show' if main_show %>">
-      <%# <% unless native_app? 
+      <% unless native_app? %>
         <div id="loading" data-loading-target="loading">
           <div class="loader-bg">
             <video autoplay loop muted playsinline webkit-playsinline preload="auto">
-              <source src="<%= asset_path('loader.webm') " type="video/webm">
-              <source src="<%= asset_path('loader.mp4')>" type="video/mp4">
+              <source src="<%= asset_path('loader.webm') %>" type="video/webm">
+              <source src="<%= asset_path('loader.mp4') %>" type="video/mp4">
             </video>
           </div>
         </div>
-      <%end %>
+      <%end%>
       <div id="content" data-loading-target="content">
         <%= yield %>
       </div>
@@ -189,7 +190,6 @@
         </footer>
       <%end%>
     <%end%>
-    <%= javascript_importmap_tags %>
     <%= yield :recaptcha_script %>
   </body>
 </html>
